--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,56 @@
-
-#logo{
-
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+* {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-#search{
-
+header {
+  padding: 0.5rem;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+header #logo {
+  font-family: "Shrikhand", sans-serif;
+  text-align: center;
 }
 
-.icon{
-
+#search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  background-color: #ececec;
+}
+#search input {
+  border-style: none;
+  padding: 0.5rem;
+  background-color: #ececec;
+  font-size: 1.2rem;
+  width: 10rem;
 }
 
-.bg-grey{
-
+.intro {
+  padding: 2rem;
+  text-align: center;
+  background-color: #F6F6F6;
+}
+.intro h2 {
+  padding: 0 2rem;
+}
+.intro p {
+  margin: 1.5rem 0;
+  font-weight: 400;
+}
+.intro .btn-cta {
+  padding: 1rem 2rem;
+  color: #fff;
+  border: none;
+  border-radius: 2rem;
+  box-shadow: 0.2rem 0.5rem 1rem lightgrey;
+  background-image: linear-gradient(355deg, #9356DC, #FF79DA);
+  font-size: 1rem;
+  transition-duration: 0.2s;
 }
 
-.btn-pink{
-
-}
-
-.fontion{
-
-}
-
-.fonction-item{
-
-}
-
-.fonction-item_number{
-
-}
-
-.icon{
-    
-}
+/*# sourceMappingURL=styles.css.map */
