--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,7 @@ $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $color-bg: #F6F6F6;
-$padding: .5rem 1rem 2rem;
+$padding: .5rem 1rem 2rem 1.5rem;
+$margin: 1rem 1.5rem 2rem 3rem;
 $global-size: (header: 9rem, button: 12rem, cta: 2rem);
 
