--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+a, li {
+  text-decoration: none;
+}
+
 header {
   padding: 0.5rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
@@ -47,10 +51,57 @@ header #logo {
   color: #fff;
   border: none;
   border-radius: 2rem;
-  box-shadow: 0.2rem 0.5rem 1rem lightgrey;
+  box-shadow: 0rem 0.2rem 0.5rem lightgrey;
   background-image: linear-gradient(355deg, #9356DC, #FF79DA);
   font-size: 1rem;
   transition-duration: 0.2s;
+}
+
+.fonction {
+  padding: 2rem 1rem;
+}
+.fonction h2 {
+  margin-bottom: 1.5rem;
+}
+.fonction .fonction-list {
+  padding: 0;
+  list-style: none;
+  counter-reset: myCounter;
+}
+@media screen and (min-width: 64rem) {
+  .fonction .fonction-list {
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
+.fonction .fonction-item {
+  margin: 1rem 0 1rem 0.75rem;
+  border: none;
+  border-radius: 2rem;
+  box-shadow: 0rem 0.2rem 0.5rem lightgrey;
+  background-color: #F6F6F6;
+  padding: 1.5rem;
+}
+.fonction .fonction-item::before {
+  counter-increment: myCounter 1;
+  content: counter(myCounter) " ";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9356DC;
+  width: 1.5rem;
+  height: 1.5rem;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  left: 0.9rem;
+}
+.fonction .fonction-item:hover {
+  background-color: #f2eafb;
+}
+.fonction .fonction-txt {
+  font-weight: bold;
+  padding-left: 2rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
