--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -61,6 +61,9 @@ header{
 
         h2{
             margin-bottom: nth($margin, 2);
+            @media screen and (min-width: 64rem){
+                text-align: center;
+            }
         }
         .fonction-list{
             padding: 0;
@@ -68,7 +71,7 @@ header{
             counter-reset: myCounter;
                 @media screen and (min-width: 64rem){
                     display: flex;
-                    justify-content: space-evenly;
+                    justify-content: center;
                 }
         }
         .fonction-item{
@@ -76,6 +79,7 @@ header{
             @include radius-shadow;
             background-color: $color-bg;
             padding: nth($padding, 4);
+            position: relative;
             &::before{
                 counter-increment: myCounter 1;
                 content: counter(myCounter) " ";
@@ -86,10 +90,13 @@ header{
                 color: #fff;
                 border-radius: 50%;
                 position: absolute;
-                left: .9rem;
+                left: -.8rem;
             }
             &:hover{
                 background-color: lighten($color-primary, 35%);
+            }
+            @media screen and (min-width: 64rem){
+                margin: 1rem;
             }
         }
             .fonction-txt{
