La palette du gout - entrées - une seule animation

--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -16,13 +16,14 @@ object{
     width: 100%;
 }
 
-header{
+.mainHeader{
     padding: nth($padding, 1);
     box-shadow: 0 0 .5rem rgba(0,0,0,.25);
     position: relative;
         #logo{
             @include font-title;
             text-align: center;
+            color: #000;
         }
 }
 
@@ -180,3 +181,91 @@ footer{
 .txtFooter{
     font-size: .8rem;
 }
+
+.restauHeader{
+    @include flexCenterY;
+    padding: 0.5rem 0 .5rem 1rem;
+    position: relative;
+    #logo{
+        @include font-title;
+        text-align: center;
+        padding-left: 4rem;
+        color: #000;
+    }
+}
+
+.banner{
+    height: 300px;
+    overflow: hidden;
+    img{
+        @include img-fit;
+    }
+}
+
+.menuContainer{
+    background-color: $color-bg;
+    margin-top: -4rem;
+    border-radius: 3rem 3rem 0 0;
+    position: relative;
+    .RestauName{
+        @include flexCenterY;
+        @include spaceBet;
+        padding: nth($padding, 3) nth($padding, 3) nth($padding, 3) nth($padding, 2);
+    }
+        h2{
+            @include font-title;
+        }
+}
+
+.menu-title{
+    padding-left: nth($padding, 2);
+    position: relative;
+    font-weight: normal;
+    &::after{
+        content: "";
+        width: 3rem;
+        height: .25rem;
+        background-color: $color-tertiary;
+        position: absolute;
+        left: 1rem;
+        bottom: -.3rem;
+    }
+}
+
+.item-card{
+    @include itemCard;
+    display: flex;
+    @include animationCard;
+    overflow: hidden;
+    .item-name{
+        @include itemName;
+    }
+    .item-price{
+        @include bold;
+        padding-right: nth($padding, 4);
+        display: flex;
+        align-items: flex-end;
+    }
+}
+
+@keyframes fadein-bottom{
+    0%{
+        transform: translateY(.5rem);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.card0{
+    animation-delay: map-get($delay-starter, card1);
+}
+.card1{
+    animation-delay: map-get($delay-starter, card2);
+}
+.card2{
+    animation-delay: map-get($delay-starter, card3);
+}
+
