--- a/public/sass/utils/_variables.scss
+++ b/public/sass/utils/_variables.scss
@@ -9,4 +9,8 @@ $color-light: #fff;
 $padding: .5rem 1rem 2rem 1.5rem;
 $margin: 1rem 1.5rem 2rem 3rem;
 $global-size: (header: 9rem, button: 12rem, cta: 2rem, img-fit: 1rem);
+$delay-starter: (card1: 0.1s, card2: 0.2s, card3: 0.3s);
+$delay-main: (card4: 0.3s, card5: 0.4s, card6: 0.5s);
+$delay-dessert: (card7: 0.6s, card8: 0.7s, card9: 0.8s);
+
 
