--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
 * {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 a, li {
@@ -13,32 +13,25 @@ object {
   width: 100%;
 }
 
-header {
+.mainHeader {
   padding: 0.5rem;
-  -webkit-box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-          box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
   position: relative;
 }
-
-header #logo {
-  font-family: 'Shrikhand', sans-serif;
+.mainHeader #logo {
+  font-family: "Shrikhand", sans-serif;
+  font-weight: normal;
   text-align: center;
+  color: #000;
 }
 
 #search {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   padding: 0.5rem;
   background-color: #ececec;
 }
-
 #search input {
   border-style: none;
   padding: 0.5rem;
@@ -52,102 +45,75 @@ header #logo {
   text-align: center;
   background-color: #F6F6F6;
 }
-
 .intro h2 {
   padding: 0 2rem;
 }
-
 .intro p {
   margin: 1.5rem 0;
   font-weight: 400;
 }
-
 .intro .btn-cta {
   padding: 1rem 2rem;
   color: #fff;
   border: none;
   border-radius: 2rem;
-  -webkit-box-shadow: 0rem .2rem .5rem lightgrey;
-          box-shadow: 0rem .2rem .5rem lightgrey;
+  box-shadow: 0rem 0.2rem 0.5rem lightgrey;
   background-image: linear-gradient(355deg, #9356DC, #FF79DA);
   font-size: 1rem;
-  -webkit-transition-duration: .20s;
-          transition-duration: .20s;
+  transition-duration: 0.2s;
 }
 
 .fonction {
   padding: 2rem 1rem;
 }
-
 .fonction h2 {
   margin-bottom: 1.5rem;
 }
-
 @media screen and (min-width: 48rem) {
   .fonction h2 {
     text-align: center;
   }
 }
-
 .fonction .fonction-list {
   padding: 0;
   list-style: none;
   counter-reset: myCounter;
 }
-
 @media screen and (min-width: 48rem) {
   .fonction .fonction-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 }
 
 .fonction-item {
-  margin: 1rem 0 1rem .75rem;
+  margin: 1rem 0 1rem 0.75rem;
   border: none;
   border-radius: 2rem;
-  -webkit-box-shadow: 0rem .2rem .5rem lightgrey;
-          box-shadow: 0rem .2rem .5rem lightgrey;
+  box-shadow: 0rem 0.2rem 0.5rem lightgrey;
   background-color: #F6F6F6;
   padding: 1.5rem;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .fonction-item::before {
   counter-increment: myCounter 1;
   content: counter(myCounter) " ";
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   background-color: #9356DC;
   width: 1.5rem;
   height: 1.5rem;
   color: #fff;
   border-radius: 50%;
   position: absolute;
-  left: -.8rem;
+  left: -0.8rem;
 }
-
 .fonction-item:hover {
   background-color: #f2eafb;
 }
-
 @media screen and (min-width: 48rem) {
   .fonction-item {
     margin: 1rem;
@@ -155,7 +121,7 @@ header #logo {
 }
 
 .icon-fonction {
-  padding-left: .5rem;
+  padding-left: 0.5rem;
 }
 
 .fonction-txt {
@@ -170,11 +136,11 @@ header #logo {
 .new {
   background-color: #99E2D0;
   color: #1A9778;
-  padding: .5rem;
-  border-radius: .125rem;
+  padding: 0.5rem;
+  border-radius: 0.125rem;
   position: absolute;
   top: 1rem;
-  right: .75rem;
+  right: 0.75rem;
   font-weight: bold;
 }
 
@@ -184,105 +150,175 @@ header #logo {
 }
 
 .restauContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin: 1.5rem 0;
   border: none;
   border-radius: 1rem;
-  -webkit-box-shadow: 0rem .2rem .5rem lightgrey;
-          box-shadow: 0rem .2rem .5rem lightgrey;
+  box-shadow: 0rem 0.2rem 0.5rem lightgrey;
   position: relative;
 }
-
 .restauContainer .restauImg {
   border-top-left-radius: 1.3rem;
   border-top-right-radius: 1.3rem;
   overflow: hidden;
   height: 200px;
 }
-
 .restauContainer img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .restauCaption {
   padding: 0.5rem 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   color: #000;
   line-height: 1.5;
 }
-
 .restauCaption p {
   font-size: 1.2rem;
 }
-
 .restauCaption .heartContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 footer {
   background-color: #353535;
   color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   padding: 1rem;
   line-height: 1.2rem;
 }
-
 footer #logo {
-  font-family: 'Shrikhand', sans-serif;
+  font-family: "Shrikhand", sans-serif;
   padding-bottom: 1rem;
 }
-
 footer a {
   color: #fff;
 }
 
 .iconFootContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-items: center;
 }
-
 .iconFootContainer .icon5 {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
-
 .iconFootContainer .icon7 {
-  margin-right: .7rem;
+  margin-right: 0.7rem;
 }
 
 .txtFooter {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
+
+.restauHeader {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0 0.5rem 1rem;
+  position: relative;
+}
+.restauHeader #logo {
+  font-family: "Shrikhand", sans-serif;
+  font-weight: normal;
+  text-align: center;
+  padding-left: 4rem;
+  color: #000;
+}
+
+.banner {
+  height: 300px;
+  overflow: hidden;
+}
+.banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.menuContainer {
+  background-color: #F6F6F6;
+  margin-top: -4rem;
+  border-radius: 3rem 3rem 0 0;
+  position: relative;
+}
+.menuContainer .RestauName {
+  display: flex;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 2rem 2rem 1rem;
+}
+.menuContainer h2 {
+  font-family: "Shrikhand", sans-serif;
+  font-weight: normal;
+}
+
+.menu-title {
+  padding-left: 1rem;
+  position: relative;
+  font-weight: normal;
+}
+.menu-title::after {
+  content: "";
+  width: 3rem;
+  height: 0.25rem;
+  background-color: #99E2D0;
+  position: absolute;
+  left: 1rem;
+  bottom: -0.3rem;
+}
+
+.item-card {
+  border-radius: 1rem;
+  box-shadow: 0rem 0.2rem 0.5rem lightgrey;
+  background-color: #fff;
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  padding: 0.7rem;
+  margin: 1rem;
+  display: flex;
+  animation: fadein-bottom 1s cubic-bezier(0.4, 0.575, 0.565, 1) both;
+  overflow: hidden;
+}
+.item-card .item-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 1.5;
+}
+.item-card .item-price {
+  font-weight: bold;
+  padding-right: 1.5rem;
+  display: flex;
+  align-items: flex-end;
+}
+
+@keyframes fadein-bottom {
+  0% {
+    transform: translateY(0.5rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.card0 {
+  animation-delay: 0.1s;
+}
+
+.card1 {
+  animation-delay: 0.2s;
+}
+
+.card2 {
+  animation-delay: 0.3s;
+}
+
 /*# sourceMappingURL=styles.css.map */
