--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,56 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
 @media all and (min-width: 1024px) {
+  main {
+    background: url("specialBG.jpg");
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-position: left center;
+  }
+
+  .accueil {
+    display: flex;
+    max-width: 100%;
+    flex-direction: row-reverse;
+  }
+  .accueil .intro {
+    width: 50%;
+    padding: 0;
+  }
+  .accueil .fonction {
+    width: 30%;
+    margin: 4rem;
+    padding: 0;
+  }
+
   .intro {
-    background: no-repeat url("../../images/bg-special.jpg") !important;
+    background-color: inherit !important;
     margin: 4rem !important;
   }
-  .intro h2 {
-    font-size: 2rem;
-  }
   .intro p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    margin: 6.3rem 0 !important;
   }
 
   .btn-cta {
     font-size: 1.2rem !important;
   }
 
-  .fonction {
-    background: linear-gradient(45deg, #99E2D0, #ee7752, #8ab2ab);
-    background-size: 300%;
+  .container > h2,
+.intro > h2,
+.list-restaurant > h2 {
+    font-size: 1.5rem !important;
+    padding: 1rem 0 !important;
+    text-transform: uppercase;
+    color: #fff;
+    background: linear-gradient(45deg, #99E2D0, #6b6b83, #3b8d99, #D16BA5);
+    background-size: 400%;
     animation: bg-gradient 12s ease infinite;
     border-radius: 50rem 120rem;
   }
-  .fonction .container > h2 {
-    font-size: 2rem;
-    color: #fff;
+
+  .fonction-txt {
+    font-weight: normal;
   }
 
   @keyframes bg-gradient {
@@ -43,7 +69,7 @@
   }
 
   .list-restaurant {
-    background-color: #fff !important;
+    background-color: inherit !important;
   }
   .list-restaurant h2 {
     text-align: center;
@@ -56,8 +82,15 @@
   }
 
   .restauContainer {
-    width: 20%;
-    max-width: 20%;
+    width: 24%;
+  }
+
+  footer {
+    align-items: center;
+  }
+
+  .restauHeader i::before {
+    left: 3rem;
   }
 
   .menuContainer {
@@ -141,6 +174,7 @@ object {
 .cta {
   display: flex;
   justify-content: center;
+  padding-top: 1.5rem;
 }
 
 .btn-cta {
@@ -155,10 +189,19 @@ object {
   position: relative;
 }
 .btn-cta:hover {
+  -webkit-animation: ctaHov 1s ease-in-out both;
   animation: ctaHov 1s ease-in-out both;
   cursor: pointer;
 }
 
+@-webkit-keyframes ctaHov {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.7;
+  }
+}
 @keyframes ctaHov {
   0% {
     opacity: 1;
@@ -187,6 +230,7 @@ object {
   .fonction .fonction-list {
     display: flex;
     justify-content: center;
+    flex-direction: column;
   }
 }
 
@@ -220,7 +264,7 @@ object {
 }
 @media screen and (min-width: 48rem) {
   .fonction-item {
-    margin: 1rem;
+    margin: 0.5rem;
   }
 }
 
@@ -280,6 +324,7 @@ object {
   justify-content: space-between;
   color: #000;
   line-height: 1.5;
+  background-color: #fff;
 }
 .restauCaption p {
   font-size: 1.2rem;
@@ -325,15 +370,18 @@ footer a {
 
 .restauHeader {
   display: flex;
-  align-items: center;
+  justify-content: center;
+  text-align: center;
   padding: 0.5rem 0 0.5rem 1rem;
   position: relative;
+}
+.restauHeader i::before {
+  position: absolute;
+  left: 1rem;
 }
 .restauHeader #logo {
   font-family: "Shrikhand", sans-serif;
   font-weight: normal;
-  text-align: center;
-  padding-left: 4rem;
   color: #000;
 }
 
@@ -439,6 +487,7 @@ footer a {
   cursor: pointer;
 }
 .item-card:hover .item-select {
+  -webkit-animation: translate-in 0.5s both;
   animation: translate-in 0.5s both;
 }
 .item-card:hover .item-appear {
@@ -446,12 +495,24 @@ footer a {
 }
 .item-card:hover .item-price {
   padding-right: 1.5rem;
+  -webkit-animation: translate-in 0.5s ease-in-out both;
   animation: translate-in 0.5s ease-in-out both;
 }
 .item-card:hover .fa-check-circle {
+  -webkit-animation: check 0.5s ease-in-out backwards;
   animation: check 0.5s ease-in-out backwards;
 }
 
+@-webkit-keyframes fadein-bottom {
+  0% {
+    transform: translateY(0.5rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 @keyframes fadein-bottom {
   0% {
     transform: translateY(0.5rem);
@@ -486,28 +547,48 @@ footer a {
 }
 
 .card1 {
+  -webkit-animation-delay: 0.1s;
   animation-delay: 0.1s;
 }
 
 .card2 {
+  -webkit-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
 
 .card3 {
+  -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
 }
 
 .item-appear {
+  -webkit-animation: fadein-left 0.5s linear both;
   animation: fadein-left 0.5s linear both;
   overflow: hidden;
 }
 
+@-webkit-keyframes fadein-left {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @keyframes fadein-left {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+@-webkit-keyframes translate-in {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
 @keyframes translate-in {
@@ -529,12 +610,75 @@ footer a {
   transform: translateX(100%);
 }
 
+@-webkit-keyframes check {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0%);
+  }
+}
 @keyframes check {
   0% {
     transform: rotate(-270deg);
   }
   100% {
     transform: rotate(0%);
+  }
+}
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  position: fixed;
+  opacity: 0.98;
+  background-color: #fff;
+  animation: loading 2s ease-in-out forwards;
+}
+
+.circle {
+  width: 1rem;
+  height: 1rem;
+  margin: 5px;
+  border-radius: 50% 20%;
+  transform: scale(0);
+  animation: grow 1s linear infinite;
+}
+
+.circle1 {
+  background-color: #9356DC;
+}
+
+.circle2 {
+  background-color: #FF79DA;
+  animation-delay: 0.25s;
+}
+
+.circle3 {
+  background-color: #99E2D0;
+  animation-delay: 0.45s;
+}
+
+@keyframes loading {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+@keyframes grow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(2);
   }
 }
 
