--- a/public/sass/responsive/_media.scss
+++ b/public/sass/responsive/_media.scss
@@ -52,8 +52,7 @@ main{
 .intro > h2,
 .list-restaurant > h2{
     font-size: 1.5rem!important;
-    padding: 1rem 0!important;
-    text-transform: uppercase;
+    padding: .5rem 0!important;
     color: #fff;
     background: linear-gradient(45deg, $color-tertiary, #6b6b83, #3b8d99, #D16BA5);    
     background-size: 400%;
@@ -62,7 +61,7 @@ main{
 }
 
 .fonction-txt{
-    font-weight: normal;
+    font-weight: normal!important;
 }
 
 @keyframes bg-gradient{
